styles.css
*{
  box-sizing: border-box;  
}

body{
    min-height: 100svh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: Outfit, sans-serif;
    background-color: hsl(212, 45%, 89%);
}

.wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-color: hsl(0deg, 0%, 100%);
    max-width: 20rem;
    max-height: 31.25rem;
    border-radius: 1.25rem;
    padding: 0rem 1rem 2.5rem 1rem;
}

img{
    border-radius: 0.625rem;
}

figcaption{
    color: hsl(218, 44%, 22%);
    font-weight: 700;
}

p {
    color: hsl(216, 15%, 48%);
    font-weight: 400;
    width: 16rem;
}

